@@ -407,6 +407,13 @@ Options with required values:
 			the oAuth authentication purposes.
 			The default value is the realm name.
 
+--auth-url 	URL to use for obtaining the A1 hash for authentication.
+			If this parameter is specified, then a HTTP GET request is
+			made to this URL with the user and realm values. The A1
+			hash contained in the response is used to compute the HMAC
+			for authentication. See the "AUTH URL" section below for
+			the request response formats.
+
 --cert			Certificate file, PEM format. Same file 
 			search rules applied as for the configuration 
 			file. If both --no-tls and --no-dtls options 
@@ -700,6 +707,34 @@ different for different clients and different sessions.
 	 
 ===================================
 
+AUTH URL
+
+The turnserver can perform a HTTP(S) request for authentication.
+
+This feature is enabled if the "--auth-url" option is specified. When
+authentication is required, a GET request is made to the auth URL. The
+"user" and "realm" values are passed as query parameters.
+
+	GET /auth-uri?user=foo&realm=bar HTTP/1.1
+
+The response is expected to be a JSON object with a key named "result"
+containing the hexadecimal representation of the A1 hash.
+
+	HTTP/1.1 200 OK
+	Content-Type: application/json
+
+	{ "result": "abcd" }
+
+Any other response is treated as an error.
+
+The results are not cached.
+
+The computation of A1 hash is described in Section 15.4 of RFC 5389.
+
+	md5 ( username ':' realm ':' password )
+
+===================================
+
 DATABASES
 
 For the user database, the turnserver has the following options:
@@ -950,3 +985,5 @@ https://groups.google.com/forum/?fromgroups=#!forum/turn-server-project-rfc5766-
 	Bradley T. Hughes <bradleythughes@fastmail.fm>
 
         Mihaly Meszaros <bakfitty@gmail.com>
+
+	Manav Rathi <manav.r@directi.com>
